fix: fix line-height issue on #input and Safari with the visible selection

--- a/packages/dnb-ui-lib/src/components/input/style/_input.scss
+++ b/packages/dnb-ui-lib/src/components/input/style/_input.scss
@@ -40,6 +40,8 @@
     overflow: hidden;
 
     border: var(--input-border-width) solid var(--color-sea-green-alt);
+
+    line-height: var(--input-height);
   }
 
   &__input {
@@ -55,7 +57,6 @@
   &__shell,
   &__input {
     height: var(--input-height);
-    line-height: var(--input-height);
     border-radius: var(--input-border-radius);
   }
 
@@ -69,7 +70,6 @@
 
     color: inherit;
     font-size: inherit;
-    line-height: inherit;
     background-color: transparent;
 
     // because of vertical centering and the current font
@@ -89,6 +89,8 @@
 
     white-space: nowrap;
     text-overflow: ellipsis;
+
+    line-height: inherit;
   }
 
   // hide the clear button on input type="search"
@@ -99,6 +101,11 @@
     display: none;
   }
 
+  // to make Safari selection not appear all to the top
+  .dnb-core-style &__input {
+    line-height: 1em;
+  }
+
   &--has-submit-button &__placeholder,
   &--has-submit-button &__input {
     padding-right: calc(var(--input-padding) * 2.5);
@@ -106,7 +113,6 @@
 
   &__row {
     display: inline-flex;
-    // flex-direction: column;
     align-items: baseline;
   }
 
@@ -129,10 +135,12 @@
   }
 
   &--medium {
+    .dnb-input__shell {
+      line-height: var(--input-height--medium);
+    }
     .dnb-input__shell,
     .dnb-input__input {
       height: var(--input-height--medium);
-      line-height: var(--input-height--medium);
       border-radius: var(--input-border-radius--medium);
     }
     .dnb-input__placeholder,
@@ -155,10 +163,12 @@
   }
 
   &--large {
+    .dnb-input__shell {
+      line-height: var(--input-height--large);
+    }
     .dnb-input__shell,
     .dnb-input__input {
       height: var(--input-height--large);
-      line-height: var(--input-height--large);
       border-radius: var(--input-border-radius--large);
     }
     .dnb-input__placeholder,
@@ -240,9 +250,9 @@
     &:not(#{&}--stretch) {
       flex: none;
     }
-    &__placeholder,
-    &__input {
-      transform: translateY(-0.125rem);
+    &__input,
+    &__placeholder {
+      transform: translateY(-0.0625rem);
     }
   }
 }
